[project]
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
license = {text = "Apache 2.0"}
requires-python = "<4.0.0,>=3.9.0"
dependencies = [
    "pydantic<3.0.0,>=2.7.0",
    "typing-extensions<5.0.0,>=4.7.0",
    "inflection<1.0.0,>=0.5.1",
]
name = "pydid"
version = "0.5.1"
description = "Python library for validating, constructing, and representing DIDs and DID Documents"
readme = "README.md"
keywords = [
    "decentralized",
    "identity",
    "ssi",
    "DID",
    "DID Document",
]

[project.urls]
homepage = "https://github.com/Indicio-tech/pydid"
repository = "https://github.com/Indicio-tech/pydid"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "poetry<2.0.0,>=1.8.3",
    "pre-commit<4.0.0,>=3.8.0",
    "ruff<1.0.0,>=0.6.8",
    "pytest-coverage<1.0,>=0.0",
    "aiohttp<4.0.0,>=3.10.6",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "coverage[toml]<8.0.0,>=7.6.1",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov pydid --doctest-modules"
markers = "int: integration tests"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
show_missing = true

[tool.ruff]
lint.select = ["E", "F", "C", "D"]

lint.ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
